# smart

./: .gitignore  pyproject.toml
smart/calc/: predictor.py
smart/model/: smart_objects.py
smart/tests/: test_smart_calc.py
smart/tests/data/: retirement_population.csv  successful_retirement_sample.csv  unsuccessful_retirement_sample.csv
