[tool.poetry]
name = "smart"
version = "0.1.0"
description = ""
authors = ["Larry Johnson <larry.johnson@fintorian>"]

[tool.poetry.dependencies]
pandas = "^1.5.2"
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
